Edit and fix errores related to images and links in index.html, colombian-arepas.html, lentils-soup.html and shrimp-ceviche.html

--- a/recipes/colombian-arepas.html
+++ b/recipes/colombian-arepas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Colombian Arepas</h1>
-    <img href="arepas.jpg" alt="Colombian Arepas">
+    <img src="arepas.jpg" alt="Colombian Arepas">
     <p>Arepa is a typical Colombian dish that we usually serve for breakfast, spread with butter on top and with a cup of Colombian hot chocolate.</p>
     <p>To make arepas you use precooked corn meal like Harina P.A.N.  or Goya many supermarkets have it in the international food aisle. You can also find it in Latino markets or Amazon.</p>
     <h2>Ingredients</h2>
