--- a/recipes/lentils-soup.html
+++ b/recipes/lentils-soup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Colombian Lentils Soup</h1>
-    <img href="lentils-soup.jpg" alt="Colombian Lentils Soup">
+    <img src="lentils-soup.jpg" alt="Colombian Lentils Soup">
     <p>This is a very substantial soup that would make a comforting meal-in-a-bowl served with avocado and white rice. This lentil soup recipe is very easy to make, a wonderful weeknight meal. This soup is made with potatoes, vegetables, spices, herbs and chorizo, but you can omit it or add beef or pork instead.</p>
     <p>To store this lentil soup, place leftover soup in an airtight container in the refrigerator for up to 3 days. If you want to freeze it, store soup in an container in the freezer for up to 1 month. Be sure the container is freezer friendly. When you are ready to use it thaw overnight in the fridge or before reheating.</p>
     
