--- a/recipes/shrimp-ceviche.html
+++ b/recipes/shrimp-ceviche.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Colombian Shrimp Ceviche</h1>
-    <img href="ceviche.jpg" alt="Colombian Shrimp Ceviche">
+    <img src="ceviche.jpg" alt="Colombian Shrimp Ceviche">
     <p>Shrimp Ceviche is very popular in the coast od Colombia,  but it is also enjoyed throughout the country. Keep this Ceviche refrigerated until ready to serve.</p>
 
     <h2>Ingredients</h2>
